--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,12 @@ dependencies {
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
 
+    //firebase cloud messaging (notification)
+    implementation 'com.google.firebase:firebase-messaging:17.3.2'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
